chore: añadir .gitignore de Flutter

--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,35 @@
-# Miscellaneous
-*.class
-*.log
-*.pyc
-*.swp
-.DS_Store
-.atom/
-.build/
-.buildlog/
-.history
-.svn/
-.swiftpm/
-migrate_working_dir/
-
-# IntelliJ related
-*.iml
-*.ipr
-*.iws
-.idea/
-
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
-
-# Flutter/Dart/Pub related
-**/doc/api/
-**/ios/Flutter/.last_build_id
+# Flutter & Dart
 .dart_tool/
+.packages
+.pub-cache/
+build/
 .flutter-plugins
 .flutter-plugins-dependencies
-.pub-cache/
-.pub/
-/build/
+.melos_tool/
+.idea/
+.vscode/
+android/local.properties
 
-# Symbolication related
-app.*.symbols
+# iOS (aunque compiles desde Windows)
+ios/Flutter/Flutter.podspec
+Generated.xcconfig
+Flutter.framework/
+Flutter.podspec
 
-# Obfuscation related
-app.*.map.json
+# OS
+.DS_Store
+Thumbs.db
 
-# Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
+# Logs
+*.log
+
+# Otros
+*.iml
+*.lock
+*.class
+*.jar
+*.war
+*.ear
+*.pyc
+*.swp
+*.swo
