--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,11 @@ dependencies:
   flutter_local_notifications: ^17.2.2
   timezone: ^0.9.2
 
+  # 👇 NUEVO para look & feel
+  google_fonts: ^6.2.1
+  flutter_slidable: ^3.1.0
+  flutter_animate: ^4.5.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
